--- a/demo.html
+++ b/demo.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html>
+<head>
+	  <link rel="stylesheet" type="text/css" href="style.css">
+
+	  <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+</head>
 <body>
+	<div style="margin-top:50px; margin-left: 150px; margin-bottom: 50px; justify-content: center;">
+		<select id="mySelect" onchange="myFunction()">
+		  <option value="AndhraPradesh">AndhraPradesh</option>
+		  <option value="Punjab">Punjab</option>
+		  <option value="Maharashtra">Maharashtra</option>
+		</select>
+	</div>
 
-<h1>The select element</h1>
+		<figure class="figure">
+			  <img src="./AndhraPradesh.jpg" id="img" class="figure-img img-fluid rounded" alt="image">
+			<!--  
+				<figcaption class="figure-caption">A caption for the above image.</figcaption>
+			 -->
+		</figure>
 
-<p>The select element is used to create a drop-down list.</p>
-
-<form>
-  <label for="cars">Choose a car:</label>
-  <select name="cars" id="cars">
-    <option value="volvo">Volvo</option>
-    <option value="saab">Saab</option>
-    <option value="opel">Opel</option>
-    <option value="audi">Audi</option>
-  </select>
-  <br><br>
-  <input type="submit" value="Submit">
-</form>
-
-<p>Click the "Submit" button and the form-data will be sent to a page on the 
-server called "action_page.php".</p>
-
+	<script>
+		function myFunction(){
+			var x=document.getElementById("mySelect").value;
+			if(x=="Punjab"){
+				document.getElementById("img").src="./Punjab.jpg";
+			}
+			if(x=="AndhraPradesh"){
+				document.getElementById("img").src="./AndhraPradesh.jpg";
+			}
+			if(x=="Maharashtra"){
+				document.getElementById("img").src="./Maharashtra.jpg";
+			}
+		}
+	</script>
 </body>
 </html>
